<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="224dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleTextMain2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subtitleTextMain3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/view_projects"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/registerQueryButton2"
                android:layout_width="137dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/aqua_blue"
                android:onClick="ViewProjects"
                android:text="@string/view_projects_button"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/subtitleTextMain4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/add_project"
                android:textSize="18sp" />

            <Button
                android:id="@+id/registerQueryButton3"
                android:layout_width="137dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/green"
                android:text="@string/add_project_button"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/subtitleTextMain5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/update_project"
                android:textSize="18sp" />

            <Button
                android:id="@+id/registerQueryButton4"
                android:layout_width="137dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/orange"
                android:text="@string/update_project_button"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/subtitleTextMain6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/delete_project"
                android:textSize="18sp" />

            <Button
                android:id="@+id/registerQueryButton5"
                android:layout_width="137dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/red2"
                android:text="@string/delete_project_button"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/subtitleTextMain8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/update_project"
                android:textSize="18sp" />

            <Button
                android:id="@+id/registerQueryButton7"
                android:layout_width="137dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/indigo"
                android:text="@string/upload_image_button" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/subtitleTextMain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/preface_home"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextHome" />

    <TextView
        android:id="@+id/titleTextHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>